reformat and cleanup